# mozak-plonky2-crypto

./: Cargo.toml
src/nonnative/gadgets/: biguint.rs
src/u32/gadgets/: arithmetic_u32.rs  multiple_comparison.rs
src/u32/gates/: add_many_u32.rs  comparison.rs  range_check_u32.rs
