[package]
name = "plonky2_crypto"
description = "Crypto gadgets for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", default-features = false }
plonky2 = "0.2"
plonky2_maybe_rayon = { version = "0.2" }
itertools = "0.12.1"
num = { version = "0.4.1", default-features = false }
serde = "1.0.197"
serde_with = { version = "3.6.1", features = ["hex"] }
rayon = { version = "1.8.1" }
hex = { version = "0.4.3" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
debug_print = { version = "1.0.0" }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
serde_json = "1.0"
criterion = "0.5"

[patch.crates-io]
plonky2 = { git = "https://github.com/0xmozak/plonky2.git" }
plonky2_maybe_rayon = { git = "https://github.com/0xmozak/plonky2.git" }
