[package]
name = "plonky2_crypto"
description = "Crypto gadgets for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
plonky2 = { version = "0.2", default-features = false, features = ["gate_testing"]}
itertools = "0.12"
num = { version = "0.4", default-features = false }
serde = "1.0"
serde_with = { version = "3.8", features = ["hex"] }
hex = { version = "0.4" }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }

[dev-dependencies]
debug_print = { version = "1.0" }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
serde_json = "1.0"
criterion = { version = "0.5", default-features = false, features = ["html_reports", "plotters", "cargo_bench_support"] }

[patch.crates-io]
plonky2 = { git = "https://github.com/0xmozak/plonky2.git" }
